--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -810,9 +810,9 @@ server {
 
         # rewrite LW links like `/posts/5yFRd3cjLpm3Nd6Di/argument-screens-off-authority` (17 character ID):
         rewrite ^(?<old>/posts/[A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9][A-Za-z0-9]/[a-z-]+$) https://lesswrong.com$old permanent;
-        rewrite ^/image/(?<old>.*)-530px.jpg-530px.jpg$ /image/$old permanent;
-        rewrite ^/image/(?<old>.*)-530px.jpg$ /image/$old permanent;
-        rewrite ^/image/(?<old>.*)-768px\.[jp][pn]g$ /image/$old permanent;
+        rewrite ^/(?<old>.*)-530px.jpg-530px.jpg$ /$old permanent;
+        rewrite ^/(?<old>.*)-530px.jpg$ /$old permanent;
+        rewrite ^/(?<old>.*)-768px\.[jp][pn]g$ /$old permanent;
 
         rewrite ^/image/(?<old>.*)$ /doc/$old permanent;
         rewrite ^/genetics/(?<old>.*)$ /doc/genetics/$old permanent;
