--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -9293,7 +9293,6 @@
 "~^/images/logo-original.svg.back1.*$" "/static/img/logo/logo-smooth.svg";
 "~^/images/logo-whitebg-large-border.png.*$" "/static/img/logo/logo-whitebg-large-border.png";
 "~^https:/www.gwern.net/static/img/logo/logo-whitebg-large-border.png$" "/static/img/logo/logo-whitebg-large-border.png";
-"~^/static/img/logo/logo-whitebg-large-border.png-530px.png.*$" "/static/img/logo/logo-whitebg-large-border.png";
 "~^/static/img/small_asc.gif$" "/static/img/tablesorter/tablesorter-asc.gif";
 "~^/static/img/bg.gif$" "/static/img/tablesorter/tablesorter-bg.gif";
 "~^/static/img/small_desc.gif$" "/static/img/tablesorter/tablesorter-desc.gif";
@@ -10388,7 +10387,6 @@
 "~^/note/Competence.*$" "/note/competence";
 "~^/review/B$" "/review/book";
 "~^/SlowingMoore-sLaw.*$" "/slowing-moores-law";
-"~^/image/iq/2023-sanchezizquierdo-figure2-forestplotof25estimatesofiqlongevitycorrelation.jpg-530px.jpg.*$" "/image/iq/2023-sanchezizquierdo-figure2-forestplotof25estimatesofiqlongevitycorrelation.jpg";
 "~^/image/iq/image/iq/2023-sanchezizquierdo-figure2-forestplotof25estimatesofiqlongevitycorrelation.jpg.*$" "/image/iq/2023-sanchezizquierdo-figure2-forestplotof25estimatesofiqlongevitycorrelation.jpg";
 "~^/doc/ai/poetry/2019-07-19-taotehching-ch1-1$" "/doc/ai/poetry/2019-07-19-taotehching-ch1-1ksamples.txt";
 "~^/doc/rl/2021-mir$" "/doc/reinforcement-learning/model/2021-mirhoseini.pdf";
@@ -11544,6 +11542,151 @@
 "~^/doc/Wikipedia-and-Other-Wikis$" "/wikipedia-and-other-wikis";
 "~^/doc/genetics/selection/artificial/1940-tyron-3.pdf.*$" "/doc/genetics/selection/artificial/1940-tryon-3.pdf";
 "~^/doc/coin-flip/index.html.*$" "/coin-flip";
+"~^/Anime-style-art$" "/face";
+"~^/Discord-bot$" "/static/404";
+"~^/GPT-3.DIGITAL.*$" "/gpt-3";
+"~^/DALLE-2-for-fun$" "/dall-e";
+"~^/doc/psychology/1971-block$" "/doc/psychology/1971-block-masterylearningtheoryandpractice.pdf";
+"~^/doc/2017-chalfin\.pdf.*$" "/doc/sociology/2017-chalfin.pdf";
+"~^/DALLE-CLIP$" "https://openai.com/dall-e-2/";
+"~^/doc/personal/2018-06-12-oolong-windowledge-sunlight.jpg$" "/doc/cat/genetics/2018-06-12-gwern-cat-windowledge-sunlight.jpg";
+"~^/youtu.be/imkf6lx6id4$" "https://www.youtube.com/watch?v=imkf6lx6id4";
+"~^/Research-bounties$" "/fulltext";
+"~^/gpt-3\),-.*$" "/gpt-3";
+"~^/doc/1968-fierro-ben%C3%ADtez\.pdf.*$" "/doc/iodine/1968-fierrobenitez.pdf";
+"~^/Story-Of-Y$" "/story-of-your-life";
+"~^/static/build/xoftheday.hs$" "/static/build/XOfTheDay.hs";
+"~^/prediction-markets/silk-road$" "/silk-road";
+"~^/prediction-markets/faces$" "/faces";
+"~^/note/Fashion--0.*$" "/note/fashion";
+"~^/Hafu\?.*$" "/jafu";
+"~^/doc/rotten.*1997-animeland-may-hideakianno-interview-french$" "/docs/eva/1997-animeland-may-hideakianno-interview-french";
+"~^/doc/psychology/okcupid/weexperimentonhumanbeings.htmlI.*$" "/doc/psychology/okcupid/weexperimentonhumanbeings.html";
+"~^/doc/psychology/okcupid/themathematicsofbeauty.htmlT.*$" "/doc/psychology/okcupid/themathematicsofbeauty.html";
+"~^/doc/psychology/okcupid/raceandattraction20092014.htmlO.*$" "/doc/psychology/okcupid/raceandattraction20092014.html";
+"~^/doc/psychology/okcupid/%C2%BF$" "/doc/psychology/okcupid/index";
+"~^/doc/psychology/2021-gullich.pdf%5C$" "/doc/psychology/2021-gullich.pdf";
+"~^/doc/psychology/2019letexier\.pdf.*$" "/doc/psychology/2019-letexier.pdf";
+"~^/doc/philosophy/epistemology/1939-moore.pdf.V.*$" "/doc/philosophy/epistemology/1939-moore.pdf";
+"~^/doc/modafinil/2013-scoriels$" "/doc/modafinil/2013-scoriels.pdf";
+"~^/doc/.*/GPT-2$" "/gpt-2";
+"~^/doc/iq/2018-willoughby.pdf2021.*$" "/doc/iq/2018-willoughby.pdf";
+"~^/doc/hopefunction/.*$" "/doc/statistics/bayes/hope-function/index";
+"~^/doc/hardtruthsfromsoftcats.tumblr.com/$" "/doc/fiction/humor/hardtruthsfromsoftcats.tumblr.com/index";
+"~^/doc/genetics/editing/2017-normile.pdfS.*$" "/doc/genetics/editing/2017-normile.pdf";
+"~^/doc/economics/1959-brooks-businessadventures-ch7-noncommunicationge\.pdf.*$" "/doc/economics/1969-brooks-businessadventures-ch7-noncommunicationge.pdf";
+"~^/doc/culture/2010-dobelli$" "/doc/culture/2010-dobelli.pdf";
+"~^/doc/culture/1998-simonton.pdf3.*$" "/doc/culture/1998-simonton.pdf";
+"~^/doc/borges/193.../n/nother$" "/doc/borges/index";
+"~^/doc/ai/nn/gan/\!w.*$" "/doc/ai/nn/gan/index";
+"~^/dnd-faq$" "/dn-faq";
+"~^/dnb-faqrelated$" "/dn-faq";
+"~^/DALLE-staging$" "/DALL-E";
+"~^/dalle-staging$" "/DALL-E";
+"~^/dalle-resources$" "/DALL-E";
+"~^/dalle-prompt-demos$" "/DALL-E";
+"~^/dall-e-miniatures$" "/DALL-E";
+"~^/dalle-demos/image-synthesis$" "/DALL-E";
+"~^/dalle-datasets$" "/DALL-E";
+"~^/dall-e/%C3%AF%C2%BC%C5%92$" "/DALL-E";
+"~^/dall-e-2-playground$" "/DALL-E";
+"~^/complementhacking$" "/complement";
+"~^/reinforcement-learning/model-free/oa5/index$" "/doc/reinforcement-learning/model-free/oa5/index";
+"~^/longevity/tirzepatide/index$" "/doc/longevity/tirzepatide/index";
+"~^/doc/xrisks/index$" "/doc/existential-risk/index";
+"~^/doc/ads/$" "/ads";
+"~^/bitcoin-is-worse-is-betteris$" "/bitcoin-is-worse-is-better";
+"~^/dalle-demo$" "/dall-e";
+"~^/DNB+FAQA$" "/dnb-faq";
+"~^/black-market-arrestsits$" "/dnm-arrest";
+"~^/doc/gan/2020-07-09-arfafax-tpdne-10ponies.jpg$" "/doc/ai/nn/gan/stylegan/2020-07-09-arfafax-tpdne-10ponies.jpg";
+"~^/doc/anime/1967wagatsuma\.pdf.*$" "/doc/anime/1967-wagatsuma.pdf";
+"~^/doc/anime/eva/1996-newtype-anno-interviewNote$" "/doc/anime/eva/1996-newtype-anno-interview";
+"~^/doc/anime/eva/2010-crcAnno$" "/doc/anime/eva/2010-crc";
+"~^/doc/2005-murakami\.pdf.*$" "/doc/anime/eva/little-boy/2005-murakami.pdf";
+"~^/doc/stati$" "/doc/statistics/index";
+"~^/doc/2003-ross\.pdf.*$" "/doc/cs/2003-ross.pdf";
+"~^/doc/2000-mao\.pdf.*$" "/doc/cs/cryptography/2000-mao.pdf";
+"~^/doc/jaeggi2008\.pdf.*$" "/doc/dual-n-back/2008-jaeggi.pdf";
+"~^/doc/2005-buehner\.pdf.*$" "/doc/dual-n-back/2005-buehner.pdf";
+"~^/doc/dnb/2005-freigni\.pdf.*$" "/doc/dual-n-back/2005-fregni.pdf";
+"~^/doc/genetics/2016-whitworth\.pdf.*$" "/doc/genetics/editing/2016-whitworth.pdf";
+"~^/doc/genetics/1988-defries\.pdf.*$" "/doc/genetics/heritable/1988-defries.pdf";
+"~^/doc/genetics/1998-lynchwalsh-geneticsquantitativetraits-ch27-reml\.pdf.*$" "/doc/genetics/heritable/1998-lynchwalsh-geneticsquantitativetraits-ch27-reml.pdf";
+"~^/doc/genetics/2014-horowitz\.pdf.*$" "/doc/genetics/heritable/2014-horowitz.pdf";
+"~^/doc/g$" "/doc/genetics/index";
+"~^/doc/1$" "/doc/index";
+"~^/doc/1994-shrestha\.pdf.*$" "/doc/iodine/1994-shrestha.pdf";
+"~^/doc/iq/1953-roe-psychologists\.pdf.*$" "/doc/iq/high/anne-roe/1953-roe-psychologists.pdf";
+"~^/doc/lesswrong-survey/2013-hpmor-reviewers.csv$" "/doc/lesswrong-survey/hpmor/2013-hpmor-reviewers.csv";
+"~^/doc/mod$" "/doc/modafinil/index";
+"~^/doc/dnb/1989-mayfield\.pdf.*$" "/doc/music/music-distraction/1989-mayfield.pdf";
+"~^/doc/dnb/2005-lesiuk\.pdf.*$" "/doc/music/music-distraction/2005-lesiuk.pdf";
+"~^/doc/1991-hughes\.pdf.*$" "/doc/nicotine/1991-hughes.pdf";
+"~^/doc/2014-moulton-memorialservice\.pdf.*$" "/static/404";
+"~^/doc/2017-chalfin\.pdf.*$" "/doc/sociology/2017-chalfin.pdf";
+"~^/doc/spaced$" "/doc/spaced-repetition/index";
+"~^/doc/statistics/1988-utts\.pdf.*$" "/doc/statistics/bias/1988-utts.pdf";
+"~^/doc/statistics/1933-thompson\.pdf.*$" "/doc/statistics/decision/1933-thompson.pdf";
+"~^/doc/statistics/1957-feller-anintroductiontoprobabilitytheoranditsapplications\.pdf.*$" "/doc/statistics/probability/1957-feller-anintroductiontoprobabilitytheoryanditsapplications.pdf";
+"~^/doc/2012-gwern-dnb-wikipedia-before\.pdf.*$" "/doc/wikipedia/2012-gwern-dnb-wikipedia-before.pdf";
+"~^/doc/zeo/2012-1$" "/doc/zeo/index";
+"~^/gpt-3-zoology$" "/gpt-3";
+"~^/prompt-engineering$" "/gpt-3#prompt-engineering";
+"~^/que$" "/question";
+"~^/ques$" "/question";
+"~^/LSD-microdosingJoku$" "/lsd-microdosing";
+"~^/note/Lizardman-constantOne$" "/notes/lizardman-constant";
+"~^/question/$" "/question";
+"~^/questio$" "/question";
+"~^/queestion$" "/question";
+"~^/silk-road/silkroadvb5piz3r.onion/index.php/silkroad/category/52$" "/silk-road";
+"~^/slowing-moore$" "/slowing-moores-law";
+"~^/SMP$" "/smpy";
+"~^/spaced+epetition$" "/spaced-repetition";
+"~^/question/favicon.ico$" "/static/img/favicon.ico";
+"~^/subscriptions$" "/subscript";
+"~^/Sleep$" "/doc/zeo/index";
+"~^/gpt-3-anime$" "/twdne#gpt-3";
+"~^/gpt-3-anime-generator$" "/twdne#gpt-3";
+"~^/questi$" "/question";
+"~^/quest$" "/question";
+"~^/Methylphenidate$" "https://en.wikipedia.org/wiki/Methylphenidate";
+"~^/the-fall-of-the-house-of-usher$" "https://en.wikipedia.org/wiki/The_Fall_of_the_House_of_Usher";
+"~^/dalle-es$" "https://openai.com/blog/dall-e/";
+"~^/dalle-mini$" "https://openai.com/dall-e-2/";
+"~^/DALLE-CLIP$" "https://openai.com/dall-e-2/";
+"~^/GAN-breeding-experiment$" "/ganbreeder";
+"~^/doc/fictio...boyfriend$" "/doc/fiction/criticism/2014-lamerichs.pdf";
+"~^/doc/fictio...stil$" "/doc/fiction/index";
+"~^/doc/fictio...still$" "/doc/fiction/index";
+"~^/doc/fictio..Sexually$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/doc/fictio..boyfriend$" "/doc/fiction/criticism/2014-lamerichs.pdf";
+"~^/doc/fictioboyfriend$" "/doc/fiction/criticism/2014-lamerichs.pdf";
+"~^/doc/fiction/science-fiction/-2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyas$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelic-opter.html$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/doc/fiction/science-fiction2020-01-15-fallisexuallyidentifyasanattackhelicopter.html$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/neo-luddism$" "/doc/economics/automation/index";
+"~^/static/include/inlined-head-escaped.html$" "/static/include/inlined-head.html";
+"~^/story-of-your-lif$" "/story-of-your-life";
+"~^/doc/fictio...I$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/doc/fictio..I$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/doc/fictio.I$" "/doc/fiction/science-fiction/2020-01-15-fall-isexuallyidentifyasanattackhelicopter.html";
+"~^/doc/fiction/science-fiction/1986-moore-watchmen-chapter2-watchmaker\.pdf.*$" "/doc/fiction/science-fiction/1986-moore-watchmen-chapter4-watchmaker.pdf";
+"~^/doc/sr/3D.*$" "/doc/darknet-markets/silk-road/1/index";
+"~^/23and.*$" "/static/404";
+"~^/doc/psychology/1993-brand-painthegiftnobodywants.pdf%5C.*$" "/doc/psychology/1993-brand-painthegiftnobodywants.pdf";
+"~^/doc/coinflip-gamecurves.png$" "/doc/statistics/decision/gwern-coinflip-gamecurves.png";
+"~^/doc/genetics/heritable/2014-horowitz.pdf&cc_key.*$" "/doc/genetics/heritable/2014-horowitz.pdf";
+"~^/Collecting\?.*$" "/collectting";
+"~^/GPT-2-Korean-painting$" "/gpt-2";
+"~^/doc/music/music-distraction/2005-Lesiuk\.pdf.*$" "/doc/music/music-distraction/2005-lesiuk.pdf";
+"~^/doc/longevity/semaglutide/2021-enebo.pdf\;-Accessed.*$" "/doc/longevity/semaglutide/2021-enebo.pdf";
+"~^/doc/statistics/bayes/2008-falk\.pdf.*$" "/doc/statistics/bias/2008-falk.pdf";
+"~^/doc/dnb/2013-ioannidis\.pdf.*$" "/doc/statistics/bias/2013-ioannidis.pdf";
+"~^/Holy-war$" "/holy-wars";
+"~^/index%5C$" "/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
