--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9344,3 +9344,38 @@ default "";
 "~^/static/img/icon/single-white-star.svg.*$" "/static/img/ornament/single-white-star.svg";
 "~^/static/img/icon/sun-verginasun-black.svg.*$" "/static/img/ornament/sun-verginasun-black.svg";
 "~^/static/img/icon/swissspiralroll.svg.*$" "/static/img/ornament/swissspiralroll.svg";
+"~^/doc/psychology/1968-raphelson-2.pdf.*$" "/doc/psychology/animal/maze/1968-raphelson-2.pdf";
+"~^/doc/psychology/1968-raphelson.pdf.*$" "/doc/psychology/animal/maze/1968-raphelson.pdf";
+"~^/doc/psychology/animal/1908-carr.pdf.*$" "/doc/psychology/animal/maze/1908-carr.pdf";
+"~^/doc/psychology/animal/1917-journalofanimalbehavior-v7.pdf.*$" "/doc/psychology/animal/maze/1917-journalofanimalbehavior-v7.pdf";
+"~^/doc/psychology/animal/1924-davis.pdf.*$" "/doc/psychology/animal/maze/1924-davis.pdf";
+"~^/doc/psychology/animal/1925-dashiell.pdf.*$" "/doc/psychology/animal/maze/1925-dashiell.pdf";
+"~^/doc/psychology/animal/1925-tolman.pdf.*$" "/doc/psychology/animal/maze/1925-tolman.pdf";
+"~^/doc/psychology/animal/1927-stone.pdf.*$" "/doc/psychology/animal/maze/1927-stone.pdf";
+"~^/doc/psychology/animal/1927-tolman.pdf.*$" "/doc/psychology/animal/maze/1927-tolman.pdf";
+"~^/doc/psychology/animal/1929-dennis.pdf.*$" "/doc/psychology/animal/maze/1929-dennis.pdf";
+"~^/doc/psychology/animal/1929-shepard.pdf.*$" "/doc/psychology/animal/maze/1929-shepard.pdf";
+"~^/doc/psychology/animal/1930-tryon.pdf.*$" "/doc/psychology/animal/maze/1930-tryon.pdf";
+"~^/doc/psychology/animal/1931-dennis.pdf.*$" "/doc/psychology/animal/maze/1931-dennis.pdf";
+"~^/doc/psychology/animal/1931-tryon-2.pdf.*$" "/doc/psychology/animal/maze/1931-tryon-2.pdf";
+"~^/doc/psychology/animal/1931-tryon-3.pdf.*$" "/doc/psychology/animal/maze/1931-tryon-3.pdf";
+"~^/doc/psychology/animal/1931-tryon-4.pdf.*$" "/doc/psychology/animal/maze/1931-tryon-4.pdf";
+"~^/doc/psychology/animal/1931-tryon.pdf.*$" "/doc/psychology/animal/maze/1931-tryon.pdf";
+"~^/doc/psychology/animal/1933-heron.pdf.*$" "/doc/psychology/animal/maze/1933-heron.pdf";
+"~^/doc/psychology/animal/1933-honzik.pdf.*$" "/doc/psychology/animal/maze/1933-honzik.pdf";
+"~^/doc/psychology/animal/1939-tryon.pdf.*$" "/doc/psychology/animal/maze/1939-tryon.pdf";
+"~^/doc/psychology/animal/1940-demand.pdf.*$" "/doc/psychology/animal/maze/1940-demand.pdf";
+"~^/doc/psychology/animal/1940-hunter.pdf.*$" "/doc/psychology/animal/maze/1940-hunter.pdf";
+"~^/doc/psychology/animal/1940-tryon-2.pdf.*$" "/doc/psychology/animal/maze/1940-tryon-2.pdf";
+"~^/doc/psychology/animal/1940-tryon.pdf.*$" "/doc/psychology/animal/maze/1940-tryon.pdf";
+"~^/doc/psychology/animal/1941-tryon-2.pdf.*$" "/doc/psychology/animal/maze/1941-tryon-2.pdf";
+"~^/doc/psychology/animal/1941-tryon.pdf.*$" "/doc/psychology/animal/maze/1941-tryon.pdf";
+"~^/doc/psychology/animal/1948-solomon.pdf.*$" "/doc/psychology/animal/maze/1948-solomon.pdf";
+"~^/doc/psychology/animal/1978-zoladek.pdf.*$" "/doc/psychology/animal/maze/1978-zoladek.pdf";
+"~^/doc/psychology/animal/1980-raphelson.pdf.*$" "/doc/psychology/animal/maze/1980-raphelson.pdf";
+"~^/1917-journalofanimalbehavior-v7.pdf.*$" "/doc/psychology/animal/maze/1917-journalofanimalbehavior-v7.pdf";
+"~^/1931-tryon-2.pdf.*$" "/doc/psychology/animal/maze/1931-tryon-2.pdf";
+"~^/1931-tryon-3.pdf.*$" "/doc/psychology/animal/maze/1931-tryon-3.pdf";
+"~^/1931-tryon-4.pdf.*$" "/doc/psychology/animal/maze/1931-tryon-4.pdf";
+"~^/1940-tryon-2.pdf.*$" "/doc/psychology/animal/maze/1940-tryon-2.pdf";
+"~^/1941-tryon-2.pdf.*$" "/doc/psychology/animal/maze/1941-tryon-2.pdf";
