--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -11687,6 +11687,17 @@
 "~^/doc/dnb/2013-ioannidis\.pdf.*$" "/doc/statistics/bias/2013-ioannidis.pdf";
 "~^/Holy-war$" "/holy-wars";
 "~^/index%5C$" "/index";
+"~^/[Gg]oogle$" "/google-shutdowns";
+"~^/doc/rotten.com/library/death/execution/gas-chamber/index.htmlI.*$" "/doc/rotten.com/library/death/execution/gas-chamber/index.html";
+"~^/static/img/arrow-left.svg.*$" "/static/img/icon/arrow-right.svg";
+"~^/mmoonn11mmoonn11.*$" "/static/404";
+"~^/doc/psychology/okcupid/howyourraceaffects-themessagesyouget.html.*$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/doc/sociology/1980-patton-qualitativeevaluationme$" "/doc/sociology/1980-patton-qualitativeevaluationmethods.pdf";
+"~^/DALLE/.*$" "/DALL-E";
+"~^/doc/spacedrepet...â€‹.*$" "/doc/spaced-repetition/index";
+"~^/ganbreeder.*$" "https://www.artbreeder.com/browse";
+"~^/GPT-2-zh.*$" "/gpt-2";
+"~^/questionsN.*$" "/question";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -17158,6 +17169,12 @@
 "~^/metaboflex.*$" "/static/404";
 "~^/haran.*$" "/static/404";
 "~^/batchgeo.*$" "/static/404";
+"~^/maxiproxies.*$" "/static/404";
+"~^/mantaplink.*$" "/static/404";
+"~^/hotelsnear.*$" "/static/404";
+"~^/brooktaphouse.*$" "/static/404";
+"~^/1559-or.*$" "/static/404";
+
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
