--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -821,6 +821,7 @@ server {
         rewrite ^/Docs?/(?<old>.*)$ /doc/$old permanent;
         rewrite ^/\.\/(?<old>.*)$ /$old permanent; # eg '/./Complement' 404s
         rewrite ^/(?<page>.*)@(?<anchor>.*)$ /$page#$anchor permanent; # eg '/review/movie@all-about-eve' - for some reason, '#' fragments often get translated to '@'. Haven't figured out who or why.
+        rewrite ^/(?<page>doc/psychology/okcupid/.*\.html).*$ /page permanent; # the ingenuity of people coming up with new typos on OKC archives is astounding
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
