--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9379,3 +9379,4 @@ default "";
 "~^/1931-tryon-4.pdf.*$" "/doc/psychology/animal/maze/1931-tryon-4.pdf";
 "~^/1940-tryon-2.pdf.*$" "/doc/psychology/animal/maze/1940-tryon-2.pdf";
 "~^/1941-tryon-2.pdf.*$" "/doc/psychology/animal/maze/1941-tryon-2.pdf";
+"~^/doc/psychiatry/2022-li-2.pdf.*$" "/doc/psychiatry/depression/2022-li-2.pdf";
