--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9380,3 +9380,7 @@ default "";
 "~^/1940-tryon-2.pdf.*$" "/doc/psychology/animal/maze/1940-tryon-2.pdf";
 "~^/1941-tryon-2.pdf.*$" "/doc/psychology/animal/maze/1941-tryon-2.pdf";
 "~^/doc/psychiatry/2022-li-2.pdf.*$" "/doc/psychiatry/depression/2022-li-2.pdf";
+"~^/static/img/favicon_old.ico.*$" "/static/img/favicon.ico";
+"~^/static/img/favicon_old.png.*$" "/static/img/logo/logo-favicon.png";
+"~^/doc/psychology/animal/1936-curtis.pdf.*$" "/doc/psychology/animal/maze/1936-curtis.pdf";
+"~^/doc/psychology/animal/maze/1915-vincent-2.pdf.*$" "/doc/psychology/animal/maze/1915-vincent-3.pdf";
