--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -821,7 +821,7 @@ server {
         rewrite ^/Docs?/(?<old>.*)$ /doc/$old permanent;
         rewrite ^/\.\/(?<old>.*)$ /$old permanent; # eg '/./Complement' 404s
         rewrite ^/(?<page>.*)@(?<anchor>.*)$ /$page#$anchor permanent; # eg '/review/movie@all-about-eve' - for some reason, '#' fragments often get translated to '@'. Haven't figured out who or why.
-        rewrite ^/(?<page>doc/psychology/okcupid/.*\.html).*$ /page permanent; # the ingenuity of people coming up with new typos on OKC archives is astounding
+        rewrite ^/(?<page>doc/psychology/okcupid/.*\.html).*$ /$page permanent; # the ingenuity of people coming up with new typos on OKC archives is astounding
         rewrite ^/(?<old>.*\.pdf)(this|it|there|as|you|me|if|special|the|in|link|they|og|2|also|for|3|\.html|abstractlike|sorry|please)$ /$old permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
