+; work on redirect updates, sparked by squashing OKCupid '/page' redirect error finally

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -821,8 +821,8 @@ server {
         rewrite ^/Docs?/(?<old>.*)$ /doc/$old permanent;
         rewrite ^/\.\/(?<old>.*)$ /$old permanent; # eg '/./Complement' 404s
         rewrite ^/(?<page>.*)@(?<anchor>.*)$ /$page#$anchor permanent; # eg '/review/movie@all-about-eve' - for some reason, '#' fragments often get translated to '@'. Haven't figured out who or why.
-        rewrite ^/(?<page>doc/psychology/okcupid/.*\.html).*$ /$page permanent; # the ingenuity of people coming up with new typos on OKC archives is astounding
-        rewrite ^/(?<old>.*\.pdf)(this|it|there|as|you|me|if|special|the|in|link|they|og|2|also|for|3|\.html|abstractlike|sorry|please)$ /$old permanent;
+        rewrite ^/(?<page>doc/psychology/okcupid/.*\.html).+$ /$page permanent; # the ingenuity of people coming up with new typos on OKC archives is astounding
+        rewrite ^/(?<old>.*\.pdf)(this|it|there|as|you|me|if|on|special|the|in|link|they|og|2|also|for|3|\.html|abstractlike|sorry|please|replydelete)$ /$old permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
