+; +another redirect-chasing batch of work

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -109,7 +109,8 @@ server {
         rewrite ^/(?<original>.*)\?[0-9]$ /$original permanent;
         rewrite ^/(?<original>.*)\?[0-9]$ /$original permanent;
         rewrite ^/(?<original>.*)\?fbclid\=.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\?utm_.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?utm.*$ /$original permanent;
+        rewrite ^/(?<original>.*)\?ref.*$ /$original permanent;
         rewrite ^/(?<original>.*)\?revision=.*$ /$original permanent;
         rewrite ^/(?<original>.*)\?amp\;\?amp\;.*$ /$original permanent;
         rewrite ^/(?<original>.*)\?usg=.*$ /$original permanent;
