--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -9382,3 +9382,4 @@ default "";
 "~^/doc/psychology/animal/1936-curtis.pdf.*$" "/doc/psychology/animal/maze/1936-curtis.pdf";
 "~^/doc/psychology/1938-barker.pdf.*$" "/doc/psychology/personality/1938-barker.pdf";
 "~^/doc/psychiatry/1938-rosenzweig.pdf.*$" "/doc/psychiatry/1938-rosenzweig-2.pdf";
+"~^/doc/psychology/animal/1911-bogardus.pdf.*$" "/doc/psychology/animal/maze/1911-bogardus.pdf";
