--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -42,9 +42,11 @@ server {
                   }
 
         # for linkArchive.sh/LinkArchive.hs: ensure that no crawlers pick up my mirrors, to reduce DMCA risk.
-        location /doc/www/               { add_header X-Robots-Tag "none, nosnippet, noarchive, nocache"; ssi off; }
+        location /doc/www/               { add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; ssi off; }
+        location /doc/link-bibliography/ { add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
         # repeat robots.txt's major rules, because Google Search appears to ignore it:
-        location /metadata/               { add_header X-Robots-Tag "none, nosnippet, noarchive, nocache"; }
+        location /metadata/              { add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
+        location /static/404             { add_header X-Robots-Tag "none, noindex, nosnippet, noarchive, nocache"; }
 
         ## support basic MIME types
         include  /etc/nginx/mime.types;
@@ -823,7 +825,11 @@ server {
         rewrite ^/\.\/(?<old>.*)$ /$old permanent; # eg '/./Complement' 404s
         rewrite ^/(?<page>.*)@(?<anchor>.*)$ /$page#$anchor permanent; # eg '/review/movie@all-about-eve' - for some reason, '#' fragments often get translated to '@'. Haven't figured out who or why.
         rewrite ^/(?<page>doc/psychology/okcupid/.*\.html).+$ /$page permanent; # the ingenuity of people coming up with new typos on OKC archives is astounding
+        rewrite ^/(?<page>doc/psychology/.*)\.htm$ /$page.html permanent;
         rewrite ^/(?<old>.*\.pdf)(this|it|there|as|you|me|if|on|special|the|in|link|they|og|2|also|for|3|\.html|abstractlike|sorry|please|replydelete)$ /$old permanent;
+        rewrite ^/(?<hs>static/build/.*)\.hi$ /$hs.hs permanent;
+        rewrite ^/(?<hs>static/build/.*)\.o$  /$hs.hs permanent;
+        rewrite ^/(?<first>.*)%E2%80%93(?<second>.*)$ /$first-$second permanent;
 
         # work around *Cloudflare* bugs! For some reason, their servers determinedly drop a slash, every time. ???
         # rewrite ^/metadata/annotations/https\:\/(?<original>[0-9a-zA-Z].*) /metadata/annotation/https%3A%2F%2F$original permanent;
