--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -12383,6 +12383,29 @@
 "~^/Wikipedia$" "/doc/wikipedia";
 "~^/doc/psychology/1983-spielberger.pdf.*$" "/static/404";
 "~^/ioine.*$" "/iodine";
+"~^/GAN-paint-studio$" "/doc/ai/nn/gan/index";
+"~^/GAN-playground$" "/doc/ai/nn/gan/index";
+"~^/Tool-AI\?fbclid.*$" "/tool-ai";
+"~^/doc/economics/1971-mcclelland-thearchievingsociety\.pdf.*$" "/doc/economics/1971-mcclelland-theachievingsociety.pdf";
+"~^/doc/www/www.mayofamily.com/null$" "/static/404";
+"~^/GAN-dataset$" "/doc/ai/nn/gan/index";
+"~^/doc/rotten.com/li/library/history/espionage/uss-liberty/index.html$" "/doc/rotten.com/library/history/espionage/uss-liberty/index.html";
+"~^/static/index.html$" "https://github.com/gwern/gwern.net/";
+"~^/Bitcoin$" "/bitcoin-is-worse-is-better";
+"~^/[Cc]at[Ss]ense.*$" "/review/cat";
+"~^/doc/iq/1980-benbow.pdf.*$" "/doc/iq/high/smpy/1980-benbow.pdf";
+"~^/doc/lw-anchoring-yvain.png.*$" "/doc/statistics/gwern-lw-anchoring-yvain.png";
+"~^/doc/lw-anchoring-yvain-omitted.png.*$" "/doc/statistics/gwern-lw-anchoring-yvain-omitted.png";
+"~^/search.google.com.*$" "/static/404";
+"~^/doc/2000-kendrick.pdf.*$" "/doc/modafinil/2000-kendrick.pdf";
+"~^/[Gg][Pp][Tt]–3.*$" "/gpt-3";
+"~^/[Dd]eath$" "/death-note-anonymity";
+"~^/doc/1980-pascal.pdf.*$" "/doc/psychology/1980-pascal.pdf";
+"~^/doc/economics/2013-heald.pdf.*$" "/doc/economics/copyright/2014-heald.pdf";
+"~^/note/Local-optima.*$" "/note/local-optima";
+"~^/doc/ai/poetry/favicon.ico.*$" "/static/img/favicon.ico";
+"~^/b[Ii][Gg][Gg][Aa][Nn].*$" "/biggan";
+"~^/doc/rotten.com/library/bio/crime/mafia/Joe_Adonis/index.html.*$" "/doc/rotten.com/library/bio/crime/mafia/joe-adonis/index.html";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~^/.*/\.git/.*$" "/static/404";
@@ -17900,6 +17923,23 @@
 "~^/.*/redirect.php$" "/static/404";
 "~^/.*/bitrix/.*$" "/static/404";
 "~^/balloonse.*$" "/static/404";
+"~^/daftar.*$" "/static/404";
+"~^/.*assessment_redirect.*$" "/static/404";
+"~^/.*javascript:alert.*$" "/static/404";
+"~^/.*game88.*$" "/static/404";
+"~^/content/\.\..*$" "/static/404";
+"~^/[Uu]ploads?/.*$" "/static/404";
+"~^/authentication.*$" "/static/404";
+"~^/[A-Za-z0-9]+\.jsp.*$" "/static/404";
+"~^/[A-Za-z0-9]+\.txt$" "/static/404";
+"~^/linkzey.*$" "/static/404";
+"~^/fancy.*$" "/static/404";
+"~^/euro[0-9].*$" "/static/404";
+"~^/.*betflikgaming.*$" "/static/404";
+"~^/.*website-designer-in-.*$" "/static/404";
+"~^/fcpera.com.*$" "/static/404";
+"~^/.*bonusnewmember.*$" "/static/404";
+"~^/semspb.tmweb.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
